<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="rekrutBayarVM" type="com.application.logicliberators.modules.rekrutbayar.data.viewmodel.RekrutBayarVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearRekrutbayar"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyleindigo_A200">
        <FrameLayout android:id="@+id/frameButtonback"
            android:layout_height="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="@dimen/_5pxh" style="@style/groupStylecornerRadius_3">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_gravity="start"
                android:layout_height="@dimen/_10pxh"
                android:layout_width="@dimen/_5pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft_black_900"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_black_900"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTentangGuru"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{rekrutBayarVM.rekrutBayarModel.txtTentangGuru}"
            style="@style/txtPoppinsregular12_2" tools:text="@string/lbl_tentang_guru"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnrp2000008s"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_101cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtRp2000008s"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtRp2000008s}"
                style="@style/txtInterbold12" tools:text="@string/msg_rp_200_000_8_s"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPuspitaSariDe"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtPuspitaSariDe}"
                style="@style/txtPoppinsbold12" tools:text="@string/msg_puspita_sari_de"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSubjekMataPe"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtSubjekMataPe}"
                style="@style/txtPoppinsregular12" tools:text="@string/msg_subjek_mata_pe"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTeknologiInfor"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtTeknologiInfor}"
                style="@style/txtPoppinsbold12" tools:text="@string/msg_teknologi_infor2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSistemKunjunga"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_33pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtSistemKunjunga}"
                style="@style/txtPoppinssemibold12" tools:text="@string/msg_sistem_kunjunga"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumntentanganda"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_101cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTentangAnda"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtTentangAnda}"
                style="@style/txtInterregular12" tools:text="@string/lbl_tentang_anda"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSriIrawati"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtSriIrawati}"
                style="@style/txtPoppinsbold12" tools:text="@string/lbl_sri_irawati"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAlamat"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtAlamat}"
                style="@style/txtPoppinsregular12" tools:text="@string/lbl_alamat"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtJlnBumiCender"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_65pxv"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_width="match_parent"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtJlnBumiCender}"
                style="@style/txtPoppinsbolditalic12" tools:text="@string/msg_jln_bumi_cender"/>
        </LinearLayout>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearRowpaymentoption"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylegray_3">
            <TextView android:ellipsize="end"
                android:id="@+id/txtPaymentOption"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_weight="0.6" android:layout_width="0dp"
                android:letterSpacing="0.0" android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtPaymentOption}"
                style="@style/txtRobotoromanbold16" tools:text="@string/lbl_payment_option"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtBankTransfer"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_17pxv"
                android:layout_marginEnd="@dimen/_15pxh"
                android:layout_marginStart="@dimen/_100pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_weight="0.4" android:layout_width="0dp"
                android:letterSpacing="0.0" android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtBankTransfer}"
                style="@style/txtRobotoromanregular11" tools:text="@string/lbl_bank_transfer"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnpaymentdetails"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_101cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtPaymentDetails"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="wrap_content"
                android:letterSpacing="0.0" android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtPaymentDetails}"
                style="@style/txtRobotoromanbold16" tools:text="@string/lbl_payment_details"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtLanguage}"
                style="@style/txtInterregular12" tools:text="@string/msg_subtotal"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtLanguageOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtLanguageOne}"
                style="@style/txtInterregular12" tools:text="@string/msg_service_fee"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtLanguageTwo"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{rekrutBayarVM.rekrutBayarModel.txtLanguageTwo}"
                style="@style/txtInterbold13" tools:text="@string/msg_total_payment"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnConfirm"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_marginTop="@dimen/_47pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@string/lbl_confirm"
            android:textAllCaps="false" style="@style/btnSolidRounded_6" tools:text="@string/lbl_confirm"/>
    </LinearLayout>
</layout>
